refactor: Method 리펙토링 및 변수명 변경